--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -7,6 +7,8 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "nodemon": "^1.18.4"
   },
   "scripts": {
