--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react": "^16.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
