--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -7,6 +7,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "path": "^0.12.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
