--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -11,7 +11,8 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4"
+    "babel-loader": "^8.0.4",
+    "nodemon": "^1.18.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
