--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "webpack-cli": "^3.1.2",
-    "webpack": "^4.21.0"
+    "express": "^4.16.4",
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "react-dev": "webpack -d --watch"
   },
   "author": "",
