--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -13,7 +13,11 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "nodemon": "^1.18.4"
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
